# qtquick3d

./: .gitignore  CMakeLists.txt  README.md  _clang-format  assets.qrc  configure_vs.bat  install.bat  qml.qrc
assets/: balsam.txt  cube.blend  path.glb  sample.blend  sample.blend1  sample.glb
assets/export/: Path.qml  RX160.qml
assets/export/meshes/: arm.mesh  base.mesh  lift_inverted.mesh  mount_left.mesh  panL.mesh  pedestal.mesh  precision_rail.mesh  roll_inverted.mesh  rotate_inverted.mesh  stand.mesh  tilt_inverted.mesh  track.mesh
include/: Common.h  Singleton.h  include.cmake
include/utilities/: QQmlHelpers.h  QQmlObjectListModel.h  utilities.cmake
include/viewmodels/: viewmodels.cmake
include/viewmodels/rig/: Axis.h  Path.h  RigModel.h  Scene.h  StaubliModel.h  Utility.h  rig.cmake
include/viewmodels/view3D/: view3D.cmake
include/viewmodels/view3D/model/: Axis.h  Path.h  model.cmake
include/viewmodels/view3D/model/rig/: Rig.h  StaubliRig.h  rig.cmake
include/viewmodels/view3D/scene/: PathScene.h  RigScene.h  Scene.h  scene.cmake
include/viewmodels/view3D/utility/: Utility.h  utility.cmake
qml/: main.qml
qml/environments/: PathEnvironment.qml  RigEnvironment.qml
qml/materials/: AxisGlowMaterial.qml  AxisMaterial.qml  PathMaterial.qml
qml/models/: Axis.qml  Model.qml  Path.qml
qml/models/meshes/: cube.mesh
qml/models/rigs/staubli/RX160/: RX160L.qml
qml/models/rigs/staubli/RX160/meshes/: arm_inverted.mesh  lift.mesh  mount_right.mesh  mount_top.mesh  pan.mesh  panL_inverted.mesh  pan_inverted.mesh  roll.mesh  rotate.mesh  tilt.mesh  track_inverted.mesh
qml/models/rigs/staubli/RX160L/: RX160L.qml
qml/models/rigs/staubli/RX160L/meshes/: arm.mesh  base_inverted.mesh  lift_inverted.mesh
qml/scenes/: PathScene.qml  RigScene.qml  RigScene.qml.autosave
qml/utilities/: CameraController.qml
qml/viewports/: PathViewport.qml  RigViewport.qml
src/: main.cpp  src.cmake
src/viewmodels/: viewmodels.cmake
src/viewmodels/rig/: Path.cpp  Scene.cpp  Utility.cpp  rig.cmake
src/viewmodels/view3D/: view3D.cmake
src/viewmodels/view3D/model/: Axis.cpp  Path.cpp  model.cmake
src/viewmodels/view3D/model/rig/: Rig.cpp  StaubliRig.cpp  rig.cmake
src/viewmodels/view3D/scene/: PathScene.cpp  RigScene.cpp  Scene.cpp  scene.cmake
src/viewmodels/view3D/utility/: Utility.cpp  utility.cmake
